@@ -1,3 +1,10 @@
+26 September 2007
++ Boost now checks all branch directories before allowing updates.
++ Boost will not allow installation if directories are not set.
++ Boost will show the options available should the directories get
+  fixed. Before, it wouldn't show the link.
++ Updated: templates/module_list.tpl
+
 19 September 2007
 + On a branch install, Boost was checking the hub's directory
   permissions instead of the branch's.
